css/main.css
:root {
    --background-color: white;
    --info-background-color: white;
    --info-border-color: rgb(205, 205, 205);
    --info-text-color: black;
    --headline-color: black;
    --text-color: black;
    --link-color: #0074bf;
    --fin-color: rgb(220, 220, 220);
    --image-opacity: 1;
    --code-background-color: rgb(240, 240, 240);
}

@media (prefers-color-scheme:dark) {
    :root {
        --background-color: rgb(17, 17, 17);
        --info-background-color: black;
        --info-border-color: black;
        --info-text-color: rgb(235, 235, 235);
        --headline-color: white;
        --text-color: rgb(170, 170, 170);
        --link-color: rgb(125, 164, 178);
        --fin-color: rgb(77, 77, 77);
        --image-opacity: 0.8;
        --code-background-color: rgb(50, 50, 50);
    }
}


@font-face {
    font-family: 'TiemposText';
    font-weight: normal;
    font-style: normal;

    src: url(https://bthdonohue.s3.amazonaws.com/fonts/tiempos/TiemposTextWeb-Regular.eot) format('embedded-opentype');
    src: url(https://bthdonohue.s3.amazonaws.com/fonts/tiempos/TiemposTextWeb-Regular.woff) format('woff');
}

@font-face {
    font-family: 'National';
    font-weight: lighter;
    font-style: normal;

    src: url(https://bthdonohue.s3.amazonaws.com/fonts/national/NationalWeb-Light.eot) format('embedded-opentype');
    src: url(https://bthdonohue.s3.amazonaws.com/fonts/national/NationalWeb-Light.woff) format('woff');
}

body {
    margin: 0;
    font-family: 'TiemposText', 'Georgia', sans-serif;
    background-color: var(--background-color);
}

h1 {
    font-size: 30px;
    margin-bottom: 2px;
}

h3 {
    font-size: 26px;
    margin-bottom: 2px;
    font-weight: normal;
}

a, a:visited {
    color: #0074bf;
    color: var(--link-color);
    text-decoration: none;
}

a:hover {
    text-decoration: underline;
}

h1 a, h1 a:visited, h1 a:hover, h3 a, h3 a:visited, h3 a:hover {
    color: black;
    color: var(--headline-color);
    text-decoration: none;
}

twitter-widget {
    margin-left: auto;
    margin-right: auto;
}

pre {
    overflow: auto;
    word-break: break-word;
    word-wrap: break-word;
    white-space: pre-wrap;
    line-height: 1.4;
    font-size: 16px;
    background-color: rgb(240, 240, 240);
    background-color: var(--code-background-color);
    padding: 15px 20px;
}

blockquote {
    font-style: italic;
}

.clearfix:after {
     visibility: hidden;
     display: block;
     font-size: 0;
     content: " ";
     clear: both;
     height: 0;
}

.container {
    overflow: hidden;
    width: 50%;
    height: 33vh;
    float: left;
}

.container a:hover {
	text-decoration: none;
}

.header .container:first-child {
    height: 34vh;
    border-bottom: 1px solid black;
}

.header .container:nth-child(2) {
    height: 34vh;
    border-bottom: 1px solid rgb(205, 205, 205);
    border-bottom: 1px solid var(--info-border-color);
}

.home, .post {
    margin: 50px 0px;
}

.post {
    max-width: 640px;
    margin-left: auto;
    margin-right: auto;
    color: black;
    color: var(--text-color);
}

h4 {
    font-size: 20px;
    font-weight: bold;
}

p, pre {
    margin: 30px 0px;
}

p img, figure img {
    width: 100%;
    transition: all 200ms ease-out;
    opacity: var(--image-opacity);
}

p img:hover, p img:active, figure img:hover, figure img:active {
    opacity: 1;
}

.post-list .post p:last-of-type {
    margin-bottom: 10px;
}

figure {
    margin: 0;
}

figure figcaption {
    margin-top: 10px;
}

figcaption {
    color: rgb(150, 150, 150);
    text-align: center;
    font-size: 14px;
}

.fin {
    color: rgb(220, 220, 220);
    color: var(--fin-color);
    font-size: 30px;
    width:90%;
    text-align: center;
}

.center {
    margin-left: auto;
    margin-right: auto;
    text-align: center;
}

.post p, li {
    font-size: 18px;
    line-height: 1.7;
}

li {
    margin-top: 15px;
}

.post-meta, p.post-meta {
    font-size: 14px;
    color: rgb(150, 150, 150);
	margin: 0;
}

.block {
    display: inline-block;
    width: 100%;
    height: 100%;
    position: relative;
    background-repeat: no-repeat;
    background-position: center;
}

a.block {
    transition: all 200ms ease-out;
}

a.block:hover {
    transform: scale(1.1);
    transition: all 200ms cubic-bezier(0.175, 0.885, 0.320, 1.275);
}

#avatar {
    background-image: url('../img/brian.png');
    background-color: black;
    background-size: inherit;
}

#info {
    background-color: white;
    background-color: var(--info-background-color);
}

#info .text {
    color: var(--info-text-color);
}

.text_container {
    position: relative;
    top: 50%;
    transform: translateY(-50%);
    padding: 10px;
    text-align: center;
}

.text {
    position: relative;
    max-width: 480px;
    margin-left: auto;
    margin-right: auto;
    color: black;
    color: var(--text-color);
    padding-bottom: 20px;
}

.text div {
    padding: 0px 10px;
}

.name {
    font-size: 46px;
}

.tagline {
    font-size: 26px;
    font-family: 'National', 'HelveticaNeue-Light', 'Helvetica', sans-serif;
    font-weight: lighter;
    letter-spacing: 1px;
}

#recents {
    background-color: rgb(40, 128, 185);
    background-image: url('../img/recents.svg');
}

#alexa {
    background-color: black;
    background-image: url('../img/alexa.svg');
}

.alexa_container {
	width: 100%;
	margin-top: 30px;
}

.instagram_gradient {
    background: linear-gradient(#400080, transparent), 
                linear-gradient(200deg, #d047d1, #ff0000, #ffff00);
}

#instagram {
    background-image: url('../img/instagram.svg');
}

#snapchat {
    background-color: yellow;
    background-image: url('../img/snapchat.svg');
}

#facebook {
    background-image: url('../img/facebook.svg');
    background-color: rgb(56,97,157);
}

#twitter {
    background-image: url('../img/twitter.svg');
    background-color: rgb(50, 170, 222);
}

#medium {
    background-image: url('../img/medium.svg');
    background-color: black;
}

#github-block {
    background-image: url('../img/github.svg');
    background-color: black;
}

#email {
    background-image: url('../img/gmail.svg');
    background-color: rgb(220, 71, 58);
}

#instapaper {
    background-image: url('../img/instapaper.svg');
    background-color: rgb(248, 242, 227);
}

.footer {
	max-width: 230px;
	margin: 80px auto 30px auto;
}

.footer a {
	display: inline-block;
	margin: 0px 10px;
	font-family: 'HelveticaNeue', 'Helvetica', sans-serif;
	color: rgb(150, 150, 150);
}

.video_frame {
    position:relative;
    width: 100%;
    padding-bottom: 56.25%;
    height: 0;
    overflow:hidden;
    background-color: black;
}

.video_frame iframe, .video_frame object, .video_frame embed {
    position:absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}


@media screen and (max-width: 768px) {
    .name {
        font-size: 38px;
    }

    .tagline {
        font-size: 22px;
    }

    .about {
        font-size: 22px;
        padding: 25px 30px;       
    }
}

@media screen and (max-width: 680px) {
    .home {
        margin: 30px 0px;
    }

    .post {
        margin: 30px 20px;
    }

    .post p, .post li {
        font-size: 16px;
    }

    ol, ul {
        padding-inline-start: 20px;
    }

    blockquote {
        margin-inline-start: 20px;
        margin-inline-end: 15px;
    }

    iframe {
        width: 100%;
    }
}

@media screen and (max-width: 535px) {
    .name {
        font-size: 26px;
    }

    .tagline {
        font-size: 14px;
    }

    .about {
        font-size: 18px;
        padding: 25px 25px;
    }
}

